examples/v0.6/errors/range_bounds_type_mismatch.nova
start: S = "0"
end: N = 10

for i in start..end {

}

// Expected: Range bounds must be numeric.